Fix word wrapping wrong behavior on pre blocks.

--- a/themes/niwibe/static/css/main.css
+++ b/themes/niwibe/static/css/main.css
@@ -117,6 +117,8 @@ ul.sub-menu, ul.children { margin:0px 10px 0px 0px; }
     font-family: "Anonymous Pro", Monospace;
     font-size: 16px;
     line-height: 18px;
+    overflow-x: scroll;
+    word-wrap: normal;
 }
 
 code {
